fix(cors): configure CORS for production frontend